k8s_pipeline/secrets-test.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: secrets-test
