k8s_pipeline/frame-aggregator.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frame-aggregation
  namespace: digital-muon-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frame-aggregator
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: frame-aggregator
    spec:
      restartPolicy: Always
      containers:
        - name: frame-aggregator
          image: ghcr.io/stfc-icd-research-and-design/supermusr-digitiser-aggregator:a00987c4d6c88cbcefbc71c89c3f1ed71370a723
          args:
            - --broker=130.246.53.247:9092
            - --group=digitiser-aggregator
            - --input-topic=daq-events
            - --output-topic=frame-events
            - --otel-endpoint=http://172.16.105.83:4317/v1/traces
            - --otel-namespace=pipeline-musr
            - --frame-ttl-ms=5000
            - -d4,5,6,7,8,9,10,11
          resources:
            limits:
              memory: 500Mi
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
