k8s_pipeline/nexus-writer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-writer
  namespace: digital-muon-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-writer
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: nexus-writer
    spec:
      restartPolicy: Always
      containers:
        - name: nexus-writer
          image: ghcr.io/stfc-icd-research-and-design/supermusr-nexus-writer:a00987c4d6c88cbcefbc71c89c3f1ed71370a723
          args:
            - --broker=130.246.53.247:9092
            - --consumer-group=nexus-writer
            - --frame-event-topic=frame-events
            - --control-topic=ics-control-change
            - --log-topic=ics-metadata
            - --sample-env-topic=ics-metadata
            - --alarm-topic=ics-alarms
            - --cache-run-ttl-ms=2500
            - --event-list-chunk-size=16384
            - --otel-endpoint=http://172.16.105.83:4317/v1/traces
            - --otel-namespace=pipeline-musr
            - --local-path=/local
            - --archive-path=/archive/incoming/musr
          volumeMounts:
            - name: local
              mountPath: /local
            - name: archive
              mountPath: /archive
          resources:
            limits:
              memory: 10Gi
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
      volumes:
        - name: local
          hostPath:
            path: /mnt/nexus-writer-scratch
        - name: archive
          persistentVolumeClaim:
            claimName: archive
