k8s_pipeline/trace-viewer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-viewer
  namespace: digital-muon-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-viewer
  template:
    metadata:
      labels:
        app: trace-viewer
    spec:
      restartPolicy: Always
      containers:
        - name: trace-viewer
          image: ghcr.io/isisneutronmuon/digital-muon-trace-viewer:6ac6787ae88e016990003c2d45f936d8d5c5781e
          args:
            - --broker=130.246.53.247:9092
            - --consumer-group=trace-viewer-0
            - --trace-topic=traces-in
            - --digitiser-event-topic=daq-events
            - --broker-name="MuSR (main spectrometer)"
            - --public-url=http://ndw2982.isis.cclrc.ac.uk/trace-viewer
          resources:
            limits:
              memory: 500Mi
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: trace-viewer
  namespace: digital-muon-pipeline
spec:
  selector:
    app: trace-viewer
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trace-viewer-http
  namespace: digital-muon-pipeline
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ndw2982.isis.cclrc.ac.uk`) && PathPrefix(`/trace-viewer`)
      middlewares:
        - name: strip-trace-viewer-prefix
      services:
        - name: trace-viewer
          port: 3000

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-trace-viewer-prefix
  namespace: digital-muon-pipeline
spec:
  stripPrefix:
    prefixes:
      - /trace-viewer
